经验功能(兼容SKILL)